ecmascript/parser/tests/test262-error-references/fail/fdf261094edffb09.js.stderr
error: Unexpected token Some(Word(for))
 --> $DIR/tests/test262-parser/fail/fdf261094edffb09.js:1:5
  |
1 | ({a:for} = 0)
  |     ^^^

